# lv_binding_rust

examples/: arc.rs  bar.rs  button_click.rs  rust_timer.rs  sdl.rs
lvgl/: Cargo.toml
lvgl-codegen/: Cargo.toml
lvgl-sys/: Cargo.toml  build.rs
lvgl-sys/src/: lib.rs  string_impl.rs
lvgl/src/: allocator.rs  display.rs  functions.rs  lib.rs  support.rs
lvgl/src/input_device/: pointer.rs
lvgl/src/lv_core/: obj.rs  style.rs
lvgl/src/misc/: anim.rs
lvgl/src/widgets/: label.rs  mod.rs
